--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="hint_quantity">Quantity</string>
     <string name="category_price">Price per unit:</string>
     <string name="category_description">Description:</string>
+    <string name="category_email">e-mail address:</string>
+
     <string name="minus">-</string>
     <string name="plus">+</string>
     <string name="order">Order from manufacturer</string>
@@ -60,7 +62,7 @@
 
     <string name="delete_all_dialog_msg">Delete all products?</string>
 
-    <string name="coming_soon">More information coming soon.</string>
+    <string name="comming_soon">More information coming soon.</string>
 
     <string name="warning_name">Introduction of product name is obligatory</string>
     <string name="warning_price">Introduction of product price is obligatory. Make sure it is a positive number.</string>
@@ -68,6 +70,18 @@
     <string name="insert_image">Insert</string>
 
     <string name="insert_product">Insert new</string>
+    <string name="tool_email">email@email.pl</string>
 
+
+    <string name="address_nothing">Address e-mail unknown</string>
+
+    <string name="address_planszoweczka">planszoweczka@planszoweczka.pl</string>
+    <string name="address_marajo">marajo@marajo.pl</string>
+    <string name="address_rebel">rebel@rebel.pl</string>
+    <string name="address_granna">granna@granna.pl</string>
+    <string name="address_galakta">galakta@galakta.pl</string>
+    <string name="warning_sending_email">There is no email client installed.</string>
+    <string name="ordering_message">Good morning, we want to order:</string>
+    <string name="ordering_quantity">. Quantity</string>
 
 </resources>
